--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "bootstrap": "^5.3.0-alpha1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "file-saver": "^2.0.5",
+    "html-docx-js": "0.2.2",
     "lucide-react": "^0.364.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
