--- a/netlify.toml
+++ b/netlify.toml
@@ -3,6 +3,11 @@
   command = "npm run build"
   functions = "netlify/functions"
   publish = "dist"
+  
+[[redirects]]
+  from = "/api/*"
+  to = "https://resume-builder-api-3i9n.onrender.com/api/:splat"
+  status = 200
 
   ## Uncomment to use this redirect for Single Page Applications like create-react-app.
   ## Not needed for static site generators.
